force-app/main/default/objects/Account/fields/HCPPersona_RFM__c.field-meta.xml
<CustomField>
    <fullName>HCPPersona_RFM__c</fullName>
    <label>HCP Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Partner Businessman</fullName>
            </value>
            <value>
                <fullName>Scientist Businessman</fullName>
            </value>
            <value>
                <fullName>Partner Pioneer</fullName>
            </value>
            <value>
                <fullName>Scientist Pioneer</fullName>
            </value>
            <value>
                <fullName>Partner Struggler</fullName>
            </value>
            <value>
                <fullName>Businessman Struggler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>