force-app/main/default/objects/Account/fields/HidePrices__c.field-meta.xml
<CustomField>
    <fullName>HidePrices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide prices</label>
    <type>Checkbox</type>
</CustomField>