force-app/main/default/objects/Account/fields/Identity_ID_RFMC__c.field-meta.xml
<CustomField>
    <fullName>Identity_ID_RFMC__c</fullName>
    <label>Identity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>