force-app/main/default/objects/Account/fields/Inactive_Reason_RMI__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Reason_RMI__c</fullName>
    <label>Inactive Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>