force-app/main/default/objects/Account/fields/Institution_Name_Translated_RMI__c.field-meta.xml
<CustomField>
    <fullName>Institution_Name_Translated_RMI__c</fullName>
    <label>Institution Name (Translated)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>