force-app/main/default/objects/Account/fields/Involved_in_Clinical_Studies__c.field-meta.xml
<CustomField>
    <fullName>Involved_in_Clinical_Studies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Involved in Clinical Studies</label>
    <type>Checkbox</type>
</CustomField>