force-app/main/default/objects/Account/fields/InvolvedInShiningTowers__c.field-meta.xml
<CustomField>
    <fullName>InvolvedInShiningTowers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Involved in Shining Towers</label>
    <type>Checkbox</type>
</CustomField>