force-app/main/default/objects/Account/fields/isRoche_RFM__c.field-meta.xml
<CustomField>
    <fullName>isRoche_RFM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Roche?</label>
    <type>Checkbox</type>
</CustomField>