force-app/main/default/objects/Account/fields/isSynched_RMI__c.field-meta.xml
<CustomField>
    <fullName>isSynched_RMI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSynched(UniteCRM)</label>
    <type>Checkbox</type>
</CustomField>