force-app/main/default/objects/Account/fields/KnownAs_RMI__c.field-meta.xml
<CustomField>
    <fullName>KnownAs_RMI__c</fullName>
    <label>Known As</label>
    <length>255</length>
    <type>Text</type>
</CustomField>