force-app/main/default/objects/Account/fields/LabPartnerCollectsPayment_RFM__c.field-meta.xml
<CustomField>
    <fullName>LabPartnerCollectsPayment_RFM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lab Partner collects payment</label>
    <type>Checkbox</type>
</CustomField>