force-app/main/default/objects/Account/fields/Last_Call_RFM__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_RFM__c</fullName>
    <description>This field captures the last completed date for Medical Call or Commercial call event</description>
    <label>Last Call</label>
    <type>Date</type>
</CustomField>