force-app/main/default/objects/Account/fields/Last_Name_Translated_RMI__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Translated_RMI__c</fullName>
    <label>Last Name (Translated)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>