force-app/main/default/objects/Account/fields/LastBatchRunTime_RMI__c.field-meta.xml
<CustomField>
    <fullName>LastBatchRunTime_RMI__c</fullName>
    <label>LastBatchRunTime(UniteCRM)</label>
    <type>DateTime</type>
</CustomField>