force-app/main/default/objects/Account/fields/LatestAccountTransDate_RFM__c.field-meta.xml
<CustomField>
    <fullName>LatestAccountTransDate_RFM__c</fullName>
    <label>Latest Account Transaction Date</label>
    <type>DateTime</type>
</CustomField>