force-app/main/default/objects/Account/fields/LeadOrigin__c.field-meta.xml
<CustomField>
    <fullName>LeadOrigin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account origin Lead record.</description>
    <label>Lead Origin</label>
    <referenceTo>Lead_RFM__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>