force-app/main/default/objects/Account/fields/LegalID_RMI__c.field-meta.xml
<CustomField>
    <fullName>LegalID_RMI__c</fullName>
    <label>Legal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>