force-app/main/default/objects/Account/fields/LogisticIntegrations__c.field-meta.xml
<CustomField>
    <fullName>LogisticIntegrations__c</fullName>
    <label>Logistic Integrations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>TNT</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>