force-app/main/default/objects/Account/fields/Mailing_Address_RMI__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_RMI__c</fullName>
    <label>Mailing Address</label>
    <type>TextArea</type>
</CustomField>