force-app/main/default/objects/Account/fields/ManualCountry_RFM__c.field-meta.xml
<CustomField>
    <fullName>ManualCountry_RFM__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AD</fullName>
            </value>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>AL</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>AO</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>AW</fullName>
            </value>
            <value>
                <fullName>AZ</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>BD</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>BF</fullName>
            </value>
            <value>
                <fullName>BG</fullName>
            </value>
            <value>
                <fullName>BH</fullName>
            </value>
            <value>
                <fullName>BI</fullName>
            </value>
            <value>
                <fullName>BJ</fullName>
            </value>
            <value>
                <fullName>BM</fullName>
            </value>
            <value>
                <fullName>BN</fullName>
            </value>
            <value>
                <fullName>BO</fullName>
            </value>
            <value>
                <fullName>BR</fullName>
            </value>
            <value>
                <fullName>BS</fullName>
            </value>
            <value>
                <fullName>BW</fullName>
            </value>
            <value>
                <fullName>BY</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>CG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>