force-app/main/default/objects/Account/fields/Marketing_Stage_RMI__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Stage_RMI__c</fullName>
    <label>Marketing Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquire</fullName>
            </value>
            <value>
                <fullName>Onboard</fullName>
            </value>
            <value>
                <fullName>Engage</fullName>
            </value>
            <value>
                <fullName>Develop</fullName>
            </value>
            <value>
                <fullName>Retain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>