force-app/main/default/objects/Account/fields/MedicalReportInJsonDownload__c.field-meta.xml
<CustomField>
    <fullName>MedicalReportInJsonDownload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical report in JSON format</label>
    <type>Checkbox</type>
</CustomField>