force-app/main/default/objects/Account/fields/MedicalReportInXmlDownload__c.field-meta.xml
<CustomField>
    <fullName>MedicalReportInXmlDownload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical report in XML format</label>
    <type>Checkbox</type>
</CustomField>