force-app/main/default/objects/Account/fields/MobileAppUser__c.field-meta.xml
<CustomField>
    <fullName>MobileAppUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MyFMI app</label>
    <type>Checkbox</type>
</CustomField>