force-app/main/default/objects/Account/fields/MyFMIOperatingSystem__c.field-meta.xml
<CustomField>
    <fullName>MyFMIOperatingSystem__c</fullName>
    <label>MyFMI Operating System</label>
    <length>10</length>
    <type>Text</type>
</CustomField>