force-app/main/default/objects/Account/fields/MyFMIVersion__c.field-meta.xml
<CustomField>
    <fullName>MyFMIVersion__c</fullName>
    <label>MyFMI Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>