force-app/main/default/objects/Account/fields/National_ID_RFM__c.field-meta.xml
<CustomField>
    <fullName>National_ID_RFM__c</fullName>
    <label>National ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>