force-app/main/default/objects/Account/fields/NotifyAboutOnlinePayments_RFM__c.field-meta.xml
<CustomField>
    <fullName>NotifyAboutOnlinePayments_RFM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send notification email when Online Payment is made.</description>
    <inlineHelpText>Set this flag to send notification to this Distributor/Lab Partner when order is submitted. Notification email will include TRF form as attachment. Email won&apos;t be send if &quot;Lab Partner collects payment&quot; field is set.</inlineHelpText>
    <label>Notify when order is submitted</label>
    <type>Checkbox</type>
</CustomField>