force-app/main/default/objects/Account/fields/Order_details_detailed_view_in_OP2__c.field-meta.xml
<CustomField>
    <fullName>Order_details_detailed_view_in_OP2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order details - detailed view in OP2</label>
    <type>Checkbox</type>
</CustomField>