force-app/main/default/objects/Account/fields/Ordering__c.field-meta.xml
<CustomField>
    <fullName>Ordering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ordering</label>
    <type>Checkbox</type>
</CustomField>