force-app/main/default/objects/Account/fields/OrderListXLSAccess__c.field-meta.xml
<CustomField>
    <fullName>OrderListXLSAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for allowing Account to download the report from the Ordering Portal 2.0</description>
    <inlineHelpText>Flag for allowing Account to download the report from the Ordering Portal 2.0</inlineHelpText>
    <label>Order list - XLS access</label>
    <type>Checkbox</type>
</CustomField>