force-app/main/default/objects/Account/fields/Orders_RFM__c.field-meta.xml
<CustomField>
    <fullName>Orders_RFM__c</fullName>
    <label>Orders</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Communications</valueSetName>
    </valueSet>
</CustomField>