force-app/main/default/objects/Account/fields/OrganizationId__c.field-meta.xml
<CustomField>
    <fullName>OrganizationId__c</fullName>
    <externalId>true</externalId>
    <label>EMR Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>