force-app/main/default/objects/Account/fields/OtherCommunicationfromRoche_RFM__c.field-meta.xml
<CustomField>
    <fullName>OtherCommunicationfromRoche_RFM__c</fullName>
    <label>Other Communication from RFM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Communications</valueSetName>
    </valueSet>
</CustomField>