force-app/main/default/objects/Account/fields/Parent_Account_CRM_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_CRM_ID__c</fullName>
    <label>Parent Account CRM ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>