force-app/main/default/objects/Account/fields/PayerDataInvoice__c.field-meta.xml
<CustomField>
    <fullName>PayerDataInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payer data for the Invoice</label>
    <type>Checkbox</type>
</CustomField>