force-app/main/default/objects/Account/fields/PendingApproval_RMI__c.field-meta.xml
<CustomField>
    <fullName>PendingApproval_RMI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if account is pending approval in data source system</description>
    <label>Pending Approval</label>
    <type>Checkbox</type>
</CustomField>