force-app/main/default/objects/Account/fields/PersonContactId_RFM__c.field-meta.xml
<CustomField>
    <fullName>PersonContactId_RFM__c</fullName>
    <formula>PersonContactId</formula>
    <label>Person Contact Id</label>
    <type>Text</type>
</CustomField>