force-app/main/default/objects/Account/fields/PhoneForSMS__c.field-meta.xml
<CustomField>
    <fullName>PhoneForSMS__c</fullName>
    <description>Phone for SMS used for providing SMS and other system related services. Example document download. Must be in strict format.</description>
    <label>Phone for SMS</label>
    <type>Phone</type>
</CustomField>