force-app/main/default/objects/Account/fields/Postal_Code_RFMC__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_RFMC__c</fullName>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>