force-app/main/default/objects/Account/fields/PreScreening__c.field-meta.xml
<CustomField>
    <fullName>PreScreening__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>By enabling this option, you give HCPs and HCP Delegated Users, who have affiliation with this HCO, a consent to send samples to the Cambridge laboratory to conduct pre-screening tests before classifying a patient to a clinical study.</inlineHelpText>
    <label>Pre-screening</label>
    <type>Checkbox</type>
</CustomField>