force-app/main/default/objects/Account/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If left blank on Distributor, HCO Price Book will be used. If HCO Price Book is deactivated, Country Price Book will be used. If no Country Price Book, Standard Price Book will be used.</inlineHelpText>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>