force-app/main/default/objects/Account/fields/Price_Book_Expiry_Date_RFM__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Expiry_Date_RFM__c</fullName>
    <formula>Price_Book__r.Expiry_Date_RFM__c</formula>
    <label>Price Book Expiry Date</label>
    <type>Date</type>
</CustomField>