force-app/main/default/objects/Account/fields/ProfessionalId_RMI__c.field-meta.xml
<CustomField>
    <fullName>ProfessionalId_RMI__c</fullName>
    <label>Professional ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>