force-app/main/default/objects/Account/fields/Province_State_RFMC__c.field-meta.xml
<CustomField>
    <fullName>Province_State_RFMC__c</fullName>
    <label>Province/State/Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>