force-app/main/default/objects/Account/fields/PublicEntity__c.field-meta.xml
<CustomField>
    <fullName>PublicEntity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Entity</label>
    <type>Checkbox</type>
</CustomField>