force-app/main/default/objects/Account/fields/PurchaseOrderNumberAsMandatory__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrderNumberAsMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchase Order Number as mandatory</label>
    <type>Checkbox</type>
</CustomField>