force-app/main/default/objects/Account/fields/PushNotificationEvents__c.field-meta.xml
<CustomField>
    <fullName>PushNotificationEvents__c</fullName>
    <label>Push Notification Events</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request for Cancellation</fullName>
            </value>
            <value>
                <fullName>Testing in Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>New Sample Required</fullName>
            </value>
            <value>
                <fullName>Order On Behalf</fullName>
            </value>
            <value>
                <fullName>Medical report is ready</fullName>
            </value>
            <value>
                <fullName>Medical report is updated</fullName>
            </value>
            <value>
                <fullName>Forecast Report Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>