force-app/main/default/objects/Account/fields/ReceivesCopyOfReport_RFM__c.field-meta.xml
<CustomField>
    <fullName>ReceivesCopyOfReport_RFM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receives copy of report</label>
    <type>Checkbox</type>
</CustomField>