force-app/main/default/objects/Account/fields/Reference_RFMC__c.field-meta.xml
<CustomField>
    <fullName>Reference_RFMC__c</fullName>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>