force-app/main/default/objects/Account/fields/Region_RFMC__c.field-meta.xml
<CustomField>
    <fullName>Region_RFMC__c</fullName>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>