force-app/main/default/objects/Account/fields/RegionalLevel1__c.field-meta.xml
<CustomField>
    <fullName>RegionalLevel1__c</fullName>
    <label>Regional Level 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>