force-app/main/default/objects/Account/fields/RegionalLevel2__c.field-meta.xml
<CustomField>
    <fullName>RegionalLevel2__c</fullName>
    <label>Regional Level 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>