force-app/main/default/objects/Account/fields/Reltio_ID__c.field-meta.xml
<CustomField>
    <fullName>Reltio_ID__c</fullName>
    <description>External Id to Account from Reltio</description>
    <externalId>true</externalId>
    <label>Reltio ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>