force-app/main/default/objects/Account/fields/RocheIdForFMI_RFM__c.field-meta.xml
<CustomField>
    <fullName>RocheIdForFMI_RFM__c</fullName>
    <formula>&apos;03-&apos;+CASESAFEID(Id)</formula>
    <label>Roche Id for FMI</label>
    <type>Text</type>
</CustomField>