force-app/main/default/objects/Account/fields/RocheKA_RMI__c.field-meta.xml
<CustomField>
    <fullName>RocheKA_RMI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Key Account</description>
    <label>Roche KA</label>
    <type>Checkbox</type>
</CustomField>