force-app/main/default/objects/Account/fields/S4H_Status__c.field-meta.xml
<CustomField>
    <fullName>S4H_Status__c</fullName>
    <label>S4H Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready to Send</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>