force-app/main/default/objects/Account/fields/S4HanaSoldTo__c.field-meta.xml
<CustomField>
    <fullName>S4HanaSoldTo__c</fullName>
    <label>S4/Hana Sold To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>