force-app/main/default/objects/Account/fields/S4HDistributor__c.field-meta.xml
<CustomField>
    <fullName>S4HDistributor__c</fullName>
    <label>S4H Distributor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>