force-app/main/default/objects/Account/fields/SAPID2_RFM__c.field-meta.xml
<CustomField>
    <fullName>SAPID2_RFM__c</fullName>
    <label>SAP ID 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>