force-app/main/default/objects/Account/fields/Secondary_Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Account_Record_Type__c</fullName>
    <description>Secondary Account Record Type</description>
    <label>Secondary Account Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HCP</fullName>
            </value>
            <value>
                <fullName>HCP Delegated User</fullName>
            </value>
            <value>
                <fullName>Order Delegated</fullName>
            </value>
            <value>
                <fullName>Other Individual</fullName>
            </value>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>ST Manager</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>