force-app/main/default/objects/Account/fields/Shipping_Address_Translated_RMI__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Translated_RMI__c</fullName>
    <label>Shipping Address (Translated)</label>
    <type>TextArea</type>
</CustomField>