force-app/main/default/objects/Account/fields/Shipping_City_Translated__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City_Translated__c</fullName>
    <label>Shipping City (Translated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>