force-app/main/default/objects/Account/fields/Shipping_Country_Translated__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country_Translated__c</fullName>
    <label>Shipping Country (Translated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>