force-app/main/default/objects/Account/fields/Shipping_State_Province_Translated__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_Province_Translated__c</fullName>
    <label>Shipping State/Province (Translated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>