force-app/main/default/objects/Account/fields/Shipping_Street_Translated__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Street_Translated__c</fullName>
    <label>Shipping Street (Translated)</label>
    <type>TextArea</type>
</CustomField>