force-app/main/default/objects/Account/fields/Specimen_Id_Warning__c.field-meta.xml
<CustomField>
    <fullName>Specimen_Id_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specimen ID Warning</label>
    <type>Checkbox</type>
</CustomField>