force-app/main/default/objects/Account/fields/StandaloneKitOrdering__c.field-meta.xml
<CustomField>
    <fullName>StandaloneKitOrdering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standalone Kit Ordering</label>
    <type>Checkbox</type>
</CustomField>