force-app/main/default/objects/Account/fields/Station_RFM__c.field-meta.xml
<CustomField>
    <fullName>Station_RFM__c</fullName>
    <description>Station picklist for Israel</description>
    <label>Station</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Pathology - sample handling</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Test process in Cambridge</fullName>
            </value>
            <value>
                <fullName>Test results</fullName>
            </value>
            <value>
                <fullName>End</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>