force-app/main/default/objects/Account/fields/Street_Address_RFMC__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_RFMC__c</fullName>
    <label>Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>