force-app/main/default/objects/Account/fields/Supplement_Address_RFMC__c.field-meta.xml
<CustomField>
    <fullName>Supplement_Address_RFMC__c</fullName>
    <label>Supplement Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>