force-app/main/default/objects/Account/fields/SupplementaryReport__c.field-meta.xml
<CustomField>
    <fullName>SupplementaryReport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supplementary Report</label>
    <type>Checkbox</type>
</CustomField>