force-app/main/default/objects/Account/fields/Supported_Countries__c.field-meta.xml
<CustomField>
    <fullName>Supported_Countries__c</fullName>
    <label>Supported Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>AN</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>AW</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>BM</fullName>
            </value>
            <value>
                <fullName>BN</fullName>
            </value>
            <value>
                <fullName>BR</fullName>
            </value>
            <value>
                <fullName>BS</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CL</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>CU</fullName>
            </value>
            <value>
                <fullName>CW</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>EC</fullName>
            </value>
            <value>
                <fullName>GD</fullName>
            </value>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>GY</fullName>
            </value>
            <value>
                <fullName>HN</fullName>
            </value>
            <value>
                <fullName>HT</fullName>
            </value>
            <value>
                <fullName>JM</fullName>
            </value>
            <value>
                <fullName>KY</fullName>
            </value>
            <value>
                <fullName>LC</fullName>
            </value>
            <value>
                <fullName>MX</fullName>
            </value>
            <value>
                <fullName>NI</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>SR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>