force-app/main/default/objects/Account/fields/SupportRequestsInThePortal__c.field-meta.xml
<CustomField>
    <fullName>SupportRequestsInThePortal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support requests in the Portal</label>
    <type>Checkbox</type>
</CustomField>