force-app/main/default/objects/Account/fields/TAE_Tier_Name_CRM4U__c.field-meta.xml
<CustomField>
    <fullName>TAE_Tier_Name_CRM4U__c</fullName>
    <label>TAE Tier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>