force-app/main/default/objects/Account/fields/Total_Number_of_Cancelled_Orders_RFM__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Cancelled_Orders_RFM__c</fullName>
    <description>This field calculates all cancelled orders (orders in Order Status = Cancelled)</description>
    <label>Total Number of Cancelled Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>