force-app/main/default/objects/Account/fields/Total_Number_of_Manual_Orders_RFM__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Manual_Orders_RFM__c</fullName>
    <description>This field stores the value of manual orders.</description>
    <label>Total Number of Manual Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>