force-app/main/default/objects/Account/fields/Total_Number_of_Orders_RFM__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Orders_RFM__c</fullName>
    <description>This field is a sum of Total Number of Submitted Orders, Total Number of Cancelled Orders and Total Number of Manual Orders</description>
    <formula>Total_Number_of_Cancelled_Orders_RFM__c + Total_Number_of_Manual_Orders_RFM__c + Total_Number_of_Submitted_Orders_RFM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is a sum of Total Number of Submitted Orders, Total Number of Cancelled Orders and Total Number of Manual Orders</inlineHelpText>
    <label>Total Number of Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>