force-app/main/default/objects/Account/fields/Total_Number_of_Submitted_Orders_RFM__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Submitted_Orders_RFM__c</fullName>
    <description>This field calculates all valid orders (excludes orders in Order Status = Cancelled OR Open)</description>
    <label>Total Number of Submitted Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>