force-app/main/default/objects/Account/fields/TotalNumberofPatients_RMI__c.field-meta.xml
<CustomField>
    <fullName>TotalNumberofPatients_RMI__c</fullName>
    <formula>AccountBreastCancerPatients_RMI__c +  AccountLungCancerPatients_RMI__c +  AccountCUPPatient_RMI__c +  AccountOtherPatients_RMI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of Patients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>