force-app/main/default/objects/Account/fields/VariantXmlReport__c.field-meta.xml
<CustomField>
    <fullName>VariantXmlReport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Variant Report in XML format</label>
    <type>Checkbox</type>
</CustomField>