force-app/main/default/objects/Account/fields/Visit_Address_Translated_RMI__c.field-meta.xml
<CustomField>
    <fullName>Visit_Address_Translated_RMI__c</fullName>
    <label>Visit Address (Translated)</label>
    <type>TextArea</type>
</CustomField>