force-app/main/default/objects/Account/fields/Visit_City_Translated__c.field-meta.xml
<CustomField>
    <fullName>Visit_City_Translated__c</fullName>
    <label>Visit City (Translated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>