force-app/main/default/objects/Account/fields/Visit_State_Province_Translated__c.field-meta.xml
<CustomField>
    <fullName>Visit_State_Province_Translated__c</fullName>
    <label>Visit State/Province (Translated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>