force-app/main/default/objects/Account/fields/Visit_Street_Translated__c.field-meta.xml
<CustomField>
    <fullName>Visit_Street_Translated__c</fullName>
    <label>Visit Street (Translated)</label>
    <type>TextArea</type>
</CustomField>